# enroll-bot

./: .env.example  .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
browse/: base.py  vhs_berlin.py
vhs_bot_ctest/: main.py
vhs_bot_ctest/browse/: base.py  registry.py  vhs_berlin.py
vhs_bot_ctest/notification/: __init__.py  base.py  registry.py  telegram.py
vhs_bot_ctest/scripts/: lint.py
