[tool.poetry]
name = "vhs-bot-ctest"
version = "0.1.0"
description = "Script to automate the process of checking the availability of free slots for courses and tests at VHS schools."
authors = ["Pedro Tanaka <pedro.stanaka@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.46.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
